sprint2-ticket1-user story: en tant que visiteur je souhaite accéder à la page d'inscription afin de m'inscrire avec un systeme de validation de compte par email

--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -82,7 +82,7 @@
                         </li>
                     </ul>
                     <a href="" class="btn btn-primary my-3 my-lg-0">Connexion</a>
-                    <a href="" class="btn btn-light my-3 my-lg-0 mx-lg-2">Inscription</a>
+                    <a href="{{path('visitor.registration.register')}}" class="btn btn-light my-3 my-lg-0 mx-lg-2">Inscription</a>
                     {# {% if app.user %}
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
