sprint2-ticket2-userstory: En tant que visiteur, je souhaite accéder à la page de connexion afin de mauthentifier.

--- a/templates/pages/visitor/registration/register.html.twig
+++ b/templates/pages/visitor/registration/register.html.twig
@@ -64,7 +64,7 @@
                     <hr>
                     <p>En créant un compte, vous acceptez les <a href="#" class="text-secondary text-decoration-none">conditions générales de vente</a> d’ElectoTech. Veuillez consulter notre <a href="#" class="text-secondary text-decoration-none">notice Protection de vos Informations Personnelles</a>, notre <a href="#" class="text-secondary text-decoration-none">notice Cookies</a> et notre <a href="#" class="text-secondary text-decoration-none">notice Annonces publicitaires basées sur vos centres d’intérêt.</a></p>
                     <hr>
-                    <p class="text-center my-1">Vous avez déjà un compte ? <a href="" class="text-secondary text-decoration-none">Connectez-vous</a></p>
+                    <p class="text-center my-1">Vous avez déjà un compte ? <a href="{{path('visitor.authentication.login')}}" class="text-secondary text-decoration-none">Connectez-vous</a></p>
                     <hr>
                     <p class="text-center my-1"><a href="{{path('visitor.welcome.index')}}" class="text-secondary text-decoration-none">Retour à l'accueil</a></p>
                 </div>
