--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -81,7 +81,7 @@
                             <a class="nav-link" href="{{path('visitor.cart.index')}}">Mon panier <i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </ul>
-                    <a href="" class="btn btn-primary my-3 my-lg-0">Connexion</a>
+                    <a href="{{path('visitor.authentication.login')}}" class="btn btn-primary my-3 my-lg-0">Connexion</a>
                     <a href="{{path('visitor.registration.register')}}" class="btn btn-light my-3 my-lg-0 mx-lg-2">Inscription</a>
                     {# {% if app.user %}
                     <ul class="navbar-nav">
