--- a/templates/pages/visitor/authentication/login.html.twig
+++ b/templates/pages/visitor/authentication/login.html.twig
@@ -44,6 +44,12 @@
                             <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
                         </div>
                         <div class="mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me" checked>
+                                Garder ma session active
+                            </label>
+                        </div>
+                        <div class="mb-3">
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         </div>
                         <div class="mb-3">
