sprint2-ticket4-userstory: En tant que visiteur, je souhaite accéder à la page de connexion afin de réinitialiser mon mot de passe.

--- a/templates/pages/visitor/authentication/login.html.twig
+++ b/templates/pages/visitor/authentication/login.html.twig
@@ -60,6 +60,10 @@
                     </form>
                     <hr>
                     <div class="text-center">
+                        <a href="{{path('visitor.authentication.forgot_password.request')}}" class="text-secondary text-decoration-none">Mot de passe oublié?</a>
+                    </div>
+                    <hr>
+                    <div class="text-center">
                         <span>Nouveau chez ElectroTech?</span>
                         <br>
                         <a class="text-decoration-none text-secondary" href="{{path('visitor.registration.register')}}">Crééz votre compte</a>
